@@ -3,6 +3,7 @@
 
  - Map improvements
  - Slideshow improvements
+ - Stories no longer have a minimum word count
 
 0.9.87
 ======
